# metaheuristic-algorithms

./: .gitignore  CMakeLists.txt
include/: benchmark.hpp  gtoa.hpp  iwo.hpp  returnValues.hpp
include/algorithms/: AlgorithmFactory.hpp  IAlgorithm.hpp  dllHandler.hpp  gtoa.cpp  iwo.cpp
include/ui/: AlgorithmData.hpp  AlgorithmList.hpp  AlgorithmListItem.hpp  Benchmark.hpp  BenchmarkDialog.hpp  Window.hpp
src/: CMakeLists.txt  benchmark.cpp  gtoa.cpp  iwo.cpp  main.cpp
src/algorithms/: AlgorithmFactory.cpp  dllHandler.cpp
src/ui/: AlgorithmData.cpp  AlgorithmList.cpp  AlgorithmListItem.cpp  Benchmark.cpp  BenchmarkDialog.cpp  Window.cpp
